@@ -1,330 +1,262 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Dynamic;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.OptionalInt;
+import com.mojang.serialization.Codec;
+import java.util.List;
+import java.util.function.IntFunction;
 import javax.annotation.Nullable;
-import org.joml.Vector3f;
 
-public class bxj extends bvu implements blh<bwf> {
-   public static final cnk bT = cnk.a(ckm.qc);
-   protected static final ImmutableList<bup<? extends buo<? super bxj>>> bU = ImmutableList.of(bup.c, bup.f, bup.t, bup.r, bup.u);
-   protected static final ImmutableList<btk<?>> bW = ImmutableList.of(
-      btk.n, btk.g, btk.h, btk.m, btk.E, btk.t, btk.r, btk.R, btk.S, btk.o, btk.N, btk.O, new btk[]{btk.Q, btk.x, btk.y, btk.B, btk.W, btk.X, btk.Y, btk.Z}
+public class bxj extends bwi implements blw<bxj.b> {
+   public static final String b = "BucketVariantTag";
+   private static final afm<Integer> d = afp.a(bxj.class, afo.b);
+   public static final List<bxj.d> c = List.of(
+      new bxj.d(bxj.b.h, cjp.b, cjp.h),
+      new bxj.d(bxj.b.g, cjp.h, cjp.h),
+      new bxj.d(bxj.b.g, cjp.h, cjp.l),
+      new bxj.d(bxj.b.l, cjp.a, cjp.h),
+      new bxj.d(bxj.b.b, cjp.l, cjp.h),
+      new bxj.d(bxj.b.a, cjp.b, cjp.a),
+      new bxj.d(bxj.b.f, cjp.g, cjp.d),
+      new bxj.d(bxj.b.j, cjp.k, cjp.e),
+      new bxj.d(bxj.b.l, cjp.a, cjp.o),
+      new bxj.d(bxj.b.f, cjp.a, cjp.e),
+      new bxj.d(bxj.b.i, cjp.a, cjp.h),
+      new bxj.d(bxj.b.l, cjp.a, cjp.b),
+      new bxj.d(bxj.b.d, cjp.j, cjp.g),
+      new bxj.d(bxj.b.e, cjp.f, cjp.d),
+      new bxj.d(bxj.b.k, cjp.o, cjp.a),
+      new bxj.d(bxj.b.c, cjp.h, cjp.o),
+      new bxj.d(bxj.b.j, cjp.o, cjp.a),
+      new bxj.d(bxj.b.g, cjp.a, cjp.e),
+      new bxj.d(bxj.b.a, cjp.o, cjp.a),
+      new bxj.d(bxj.b.b, cjp.h, cjp.a),
+      new bxj.d(bxj.b.d, cjp.j, cjp.e),
+      new bxj.d(bxj.b.g, cjp.e, cjp.e)
    );
-   private static final afc<bwf> cc = aff.a(bxj.class, afe.x);
-   private static final afc<OptionalInt> cd = aff.a(bxj.class, afe.u);
-   private static final int ce = 5;
-   public static final String bX = "variant";
-   public final bjp bY = new bjp();
-   public final bjp bZ = new bjp();
-   public final bjp ca = new bjp();
-   public final bjp cb = new bjp();
+   private boolean e = true;
 
-   public bxj(bjx<? extends bvu> $$0, cqz $$1) {
+   public bxj(bkm<? extends bxj> $$0, crs $$1) {
       super($$0, $$1);
-      this.bK = new bxj.a(this);
-      this.a(ebp.j, 4.0F);
-      this.a(ebp.e, -1.0F);
-      this.bL = new bqj(this, 85, 10, 0.02F, 0.1F, true);
-      this.t(1.0F);
    }
 
-   @Override
-   protected blj.b<bxj> dO() {
-      return blj.a(bW, bU);
+   public static String c(int $$0) {
+      return "entity.minecraft.tropical_fish.predefined." + $$0;
    }
 
-   @Override
-   protected blj<?> a(Dynamic<?> $$0) {
-      return bxk.a(this.dO().a($$0));
+   static int a(bxj.b $$0, cjp $$1, cjp $$2) {
+      return $$0.b() & 65535 | ($$1.a() & 0xFF) << 16 | ($$2.a() & 0xFF) << 24;
    }
 
-   @Override
-   public blj<bxj> dN() {
-      return (blj<bxj>)super.dN();
+   public static cjp s(int $$0) {
+      return cjp.a($$0 >> 16 & 0xFF);
+   }
+
+   public static cjp t(int $$0) {
+      return cjp.a($$0 >> 24 & 0xFF);
+   }
+
+   public static bxj.b u(int $$0) {
+      return bxj.b.a($$0 & 65535);
    }
 
    @Override
    protected void b_() {
       super.b_();
-      this.an.a(cc, bwf.a);
-      this.an.a(cd, OptionalInt.empty());
+      this.an.a(d, 0);
    }
 
    @Override
-   public void s() {
-      this.an.b(cd, OptionalInt.empty());
-   }
-
-   public Optional<bjt> t() {
-      return this.an.b(cd).stream().mapToObj(this.dL()::a).filter(Objects::nonNull).findFirst();
-   }
-
-   @Override
-   public void a(bjt $$0) {
-      this.an.b(cd, OptionalInt.of($$0.ah()));
-   }
-
-   @Override
-   public int fH() {
-      return 35;
-   }
-
-   @Override
-   public int Z() {
-      return 5;
-   }
-
-   public bwf y() {
-      return this.an.b(cc);
-   }
-
-   public void a(bwf $$0) {
-      this.an.b(cc, $$0);
-   }
-
-   @Override
-   public void b(rt $$0) {
+   public void b(rz $$0) {
       super.b($$0);
-      $$0.a("variant", jy.al.b(this.y()).toString());
+      $$0.a("Variant", this.gq());
    }
 
    @Override
-   public void a(rt $$0) {
+   public void a(rz $$0) {
       super.a($$0);
-      bwf $$1 = jy.al.a(afw.a($$0.l("variant")));
-      if ($$1 != null) {
-         this.a($$1);
-      }
+      this.v($$0.h("Variant"));
+   }
+
+   private void v(int $$0) {
+      this.an.b(d, $$0);
    }
 
    @Override
-   protected void X() {
-      this.dL().ad().a("frogBrain");
-      this.dN().a((alq)this.dL(), this);
-      this.dL().ad().c();
-      this.dL().ad().a("frogActivityUpdate");
-      bxk.a(this);
-      this.dL().ad().c();
-      super.X();
+   public boolean d(int $$0) {
+      return !this.e;
+   }
+
+   private int gq() {
+      return this.an.b(d);
+   }
+
+   public cjp gn() {
+      return s(this.gq());
+   }
+
+   public cjp go() {
+      return t(this.gq());
+   }
+
+   public bxj.b gp() {
+      return u(this.gq());
+   }
+
+   public void a(bxj.b $$0) {
+      int $$1 = this.gq();
+      cjp $$2 = s($$1);
+      cjp $$3 = t($$1);
+      this.v(a($$0, $$2, $$3));
    }
 
    @Override
-   public void l() {
-      if (this.dL().x_()) {
-         this.cb.a(this.ba() && !this.aQ.c(), this.ah);
-      }
-
-      super.l();
+   public void l(clb $$0) {
+      super.l($$0);
+      rz $$1 = $$0.w();
+      $$1.a("BucketVariantTag", this.gq());
    }
 
    @Override
-   public void a(afc<?> $$0) {
-      if (as.equals($$0)) {
-         bkv $$1 = this.an();
-         if ($$1 == bkv.g) {
-            this.bY.a(this.ah);
+   public clb b() {
+      return new clb(cle.pU);
+   }
+
+   @Override
+   protected aqm w() {
+      return aqn.yd;
+   }
+
+   @Override
+   protected aqm m_() {
+      return aqn.ye;
+   }
+
+   @Override
+   protected aqm d(bjg $$0) {
+      return aqn.yg;
+   }
+
+   @Override
+   protected aqm gf() {
+      return aqn.yf;
+   }
+
+   @Nullable
+   @Override
+   public blr a(csh $$0, bio $$1, blc $$2, @Nullable blr $$3, @Nullable rz $$4) {
+      $$3 = super.a($$0, $$1, $$2, $$3, $$4);
+      if ($$2 == blc.l && $$4 != null && $$4.b("BucketVariantTag", 3)) {
+         this.v($$4.h("BucketVariantTag"));
+         return $$3;
+      } else {
+         ato $$5 = $$0.E_();
+         bxj.d $$7;
+         if ($$3 instanceof bxj.c $$6) {
+            $$7 = $$6.b;
+         } else if ((double)$$5.i() < 0.9) {
+            $$7 = ac.a(c, $$5);
+            $$3 = new bxj.c(this, $$7);
          } else {
-            this.bY.a();
+            this.e = false;
+            bxj.b[] $$9 = bxj.b.values();
+            cjp[] $$10 = cjp.values();
+            bxj.b $$11 = ac.a($$9, $$5);
+            cjp $$12 = ac.a($$10, $$5);
+            cjp $$13 = ac.a($$10, $$5);
+            $$7 = new bxj.d($$11, $$12, $$13);
          }
 
-         if ($$1 == bkv.i) {
-            this.bZ.a(this.ah);
-         } else {
-            this.bZ.a();
-         }
-
-         if ($$1 == bkv.j) {
-            this.ca.a(this.ah);
-         } else {
-            this.ca.a();
-         }
-      }
-
-      super.a($$0);
-   }
-
-   @Override
-   protected void v(float $$0) {
-      float $$1;
-      if (this.bY.c()) {
-         $$1 = 0.0F;
-      } else {
-         $$1 = Math.min($$0 * 25.0F, 1.0F);
-      }
-
-      this.aQ.a($$1, 0.4F);
-   }
-
-   @Nullable
-   @Override
-   public bjo a(alq $$0, bjo $$1) {
-      bxj $$2 = bjx.O.a((cqz)$$0);
-      if ($$2 != null) {
-         bxk.a($$2, $$0.E_());
-      }
-
-      return $$2;
-   }
-
-   @Override
-   public boolean n_() {
-      return false;
-   }
-
-   @Override
-   public void a(boolean $$0) {
-   }
-
-   @Override
-   public void a(alq $$0, bvu $$1) {
-      this.a($$0, $$1, null);
-      this.dN().a(btk.X, atz.a);
-   }
-
-   @Override
-   public blc a(cro $$0, bhz $$1, bkn $$2, @Nullable blc $$3, @Nullable rt $$4) {
-      ib<crx> $$5 = $$0.s(this.dl());
-      if ($$5.a(aqr.ah)) {
-         this.a(bwf.c);
-      } else if ($$5.a(aqr.ai)) {
-         this.a(bwf.b);
-      } else {
-         this.a(bwf.a);
-      }
-
-      bxk.a(this, $$0.E_());
-      return super.a($$0, $$1, $$2, $$3, $$4);
-   }
-
-   public static blo.a ge() {
-      return bkl.A().a(blp.m, 1.0).a(blp.l, 10.0).a(blp.c, 10.0);
-   }
-
-   @Nullable
-   @Override
-   protected aqc w() {
-      return aqd.iG;
-   }
-
-   @Nullable
-   @Override
-   protected aqc d(bir $$0) {
-      return aqd.iJ;
-   }
-
-   @Nullable
-   @Override
-   protected aqc m_() {
-      return aqd.iH;
-   }
-
-   @Override
-   protected void b(ht $$0, dgb $$1) {
-      this.a(aqd.iM, 0.15F, 1.0F);
-   }
-
-   @Override
-   public boolean cy() {
-      return false;
-   }
-
-   @Override
-   protected void W() {
-      super.W();
-      abz.a(this);
-   }
-
-   @Override
-   protected int d(float $$0, float $$1) {
-      return super.d($$0, $$1) - 5;
-   }
-
-   @Override
-   public void h(eif $$0) {
-      if (this.cW() && this.aX()) {
-         this.a(this.fe(), $$0);
-         this.a(bkp.a, this.do());
-         this.f(this.do().a(0.9));
-      } else {
-         super.h($$0);
+         this.v($$7.a());
+         return $$3;
       }
    }
 
-   public static boolean j(bkj $$0) {
-      if ($$0 instanceof cau $$1 && $$1.gf() != 1) {
-         return false;
+   public static boolean b(bkm<bxj> $$0, crt $$1, blc $$2, ht $$3, ato $$4) {
+      return $$1.b_($$3.d()).a(arh.a) && $$1.a_($$3.c()).a(cuv.G) && ($$1.s($$3).a(arb.am) || bxl.c($$0, $$1, $$2, $$3, $$4));
+   }
+
+   public static enum a {
+      a(0),
+      b(1);
+
+      final int c;
+
+      private a(int $$0) {
+         this.c = $$0;
+      }
+   }
+
+   public static enum b implements aub {
+      a("kob", bxj.a.a, 0),
+      b("sunstreak", bxj.a.a, 1),
+      c("snooper", bxj.a.a, 2),
+      d("dasher", bxj.a.a, 3),
+      e("brinely", bxj.a.a, 4),
+      f("spotty", bxj.a.a, 5),
+      g("flopper", bxj.a.b, 0),
+      h("stripey", bxj.a.b, 1),
+      i("glitter", bxj.a.b, 2),
+      j("blockfish", bxj.a.b, 3),
+      k("betty", bxj.a.b, 4),
+      l("clayfish", bxj.a.b, 5);
+
+      public static final Codec<bxj.b> m = aub.a(bxj.b::values);
+      private static final IntFunction<bxj.b> n = asb.a(bxj.b::b, values(), a);
+      private final String o;
+      private final ur p;
+      private final bxj.a q;
+      private final int r;
+
+      private b(String $$0, bxj.a $$1, int $$2) {
+         this.o = $$0;
+         this.q = $$1;
+         this.r = $$1.c | $$2 << 8;
+         this.p = ur.c("entity.minecraft.tropical_fish.type." + this.o);
       }
 
-      return $$0.ag().a(aqv.n);
+      public static bxj.b a(int $$0) {
+         return n.apply($$0);
+      }
+
+      public bxj.a a() {
+         return this.q;
+      }
+
+      public int b() {
+         return this.r;
+      }
+
+      @Override
+      public String c() {
+         return this.o;
+      }
+
+      public ur d() {
+         return this.p;
+      }
    }
 
-   @Override
-   protected bts b(cqz $$0) {
-      return new bxj.c(this, $$0);
-   }
+   static class c extends bwi.a {
+      final bxj.d b;
 
-   @Override
-   protected Vector3f a(bjt $$0, bju $$1, float $$2) {
-      return new Vector3f(0.0F, $$1.b - 0.125F * $$2, -0.25F * $$2);
-   }
-
-   @Override
-   public boolean m(ckj $$0) {
-      return bT.a($$0);
-   }
-
-   public static boolean c(bjx<? extends bvu> $$0, cra $$1, bkn $$2, ht $$3, ate $$4) {
-      return $$1.a_($$3.d()).a(aqs.bY) && a($$1, $$3);
-   }
-
-   class a extends bqg {
-      a(bkl $$0) {
+      c(bxj $$0, bxj.d $$1) {
          super($$0);
-      }
-
-      @Override
-      protected boolean c() {
-         return bxj.this.t().isEmpty();
+         this.b = $$1;
       }
    }
 
-   static class b extends ebn {
-      private final ht.a l = new ht.a();
-
-      public b(boolean $$0) {
-         super($$0);
+   public static record d(bxj.b a, cjp b, cjp c) {
+      public int a() {
+         return bxj.a(this.a, this.b, this.c);
       }
 
-      @Override
-      public ebr a() {
-         return !this.b.aX() ? super.a() : this.c(new ht(asy.a(this.b.cG().a), asy.a(this.b.cG().b), asy.a(this.b.cG().c)));
+      public bxj.b b() {
+         return this.a;
       }
 
-      @Override
-      public ebp a(cqf $$0, int $$1, int $$2, int $$3) {
-         this.l.d($$1, $$2 - 1, $$3);
-         dgb $$4 = $$0.a_(this.l);
-         return $$4.a(aqs.bK) ? ebp.b : super.a($$0, $$1, $$2, $$3);
-      }
-   }
-
-   static class c extends btp {
-      c(bxj $$0, cqz $$1) {
-         super($$0, $$1);
+      public cjp c() {
+         return this.b;
       }
 
-      @Override
-      public boolean b(ebp $$0) {
-         return $$0 != ebp.k && super.b($$0);
-      }
-
-      @Override
-      protected ebv a(int $$0) {
-         this.o = new bxj.b(true);
-         this.o.a(true);
-         return new ebv(this.o, $$0);
+      public cjp d() {
+         return this.c;
       }
    }
 }
