@@ -1,47 +1,42 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface oz {
-   static void a(oo<dwg> $$0) {
-      ic<dwa> $$1 = $$0.a(jz.aA);
-      ic<crx> $$2 = $$0.a(jz.aq);
-      ib.c<dwg> $$3 = $$0.a(
-         dvt.a,
-         new dwg(
-            List.of(dwg.a($$1.b(dvu.t)), dwg.a($$1.b(dvu.u)), dwg.a($$1.b(dvu.v)), dwg.a($$1.b(dvu.w)), dwg.a($$1.b(dvu.x))), new dwv(34, 8, dww.a, 10387312)
+public class oz {
+   public static final agf<dye> a = pb.a("pillager_outpost/base_plates");
+
+   public static void a(ou<dye> $$0) {
+      ic<eat> $$1 = $$0.a(jz.aC);
+      ib<eat> $$2 = $$1.b(pc.q);
+      ic<dye> $$3 = $$0.a(jz.aE);
+      ib<dye> $$4 = $$3.b(pb.a);
+      $$0.a(a, new dye($$4, ImmutableList.of(Pair.of(dyc.a("pillager_outpost/base_plate"), 1)), dye.a.b));
+      pb.a(
+         $$0,
+         "pillager_outpost/towers",
+         new dye(
+            $$4,
+            ImmutableList.of(Pair.of(dyc.a(ImmutableList.of(dyc.a("pillager_outpost/watchtower"), dyc.a("pillager_outpost/watchtower_overgrown", $$2))), 1)),
+            dye.a.b
          )
       );
-      $$0.a(dvt.b, new dwg($$1.b(dvu.f), new dwv(32, 8, dww.a, 14357617)));
-      $$0.a(dvt.c, new dwg($$1.b(dvu.g), new dwv(32, 8, dww.a, 14357618)));
-      $$0.a(dvt.d, new dwg($$1.b(dvu.e), new dwv(32, 8, dww.a, 14357619)));
-      $$0.a(dvt.e, new dwg($$1.b(dvu.j), new dwv(32, 8, dww.a, 14357620)));
-      $$0.a(dvt.f, new dwg($$1.b(dvu.a), new dwv(iw.g, dwx.c.b, 0.2F, 165745296, Optional.of(new dwx.a($$3, 10)), 32, 8, dww.a)));
-      $$0.a(dvt.q, new dwg($$1.b(dvu.F), new dwv(24, 8, dww.a, 20083232)));
-      $$0.a(dvt.g, new dwg($$1.b(dvu.l), new dwv(32, 5, dww.b, 10387313)));
-      $$0.a(dvt.h, new dwg($$1.b(dvu.d), new dwv(80, 20, dww.b, 10387319)));
-      $$0.a(dvt.i, new dwg($$1.b(dvu.r), new dwv(new iw(9, 0, 9), dwx.c.c, 0.01F, 0, Optional.empty(), 1, 0, dww.a)));
-      $$0.a(dvt.j, new dwg(List.of(dwg.a($$1.b(dvu.b)), dwg.a($$1.b(dvu.c))), new dwv(iw.g, dwx.c.d, 0.004F, 0, Optional.empty(), 1, 0, dww.a)));
-      $$0.a(
-         dvt.k,
-         new dwg(
-            List.of(
-               dwg.a($$1.b(dvu.y)),
-               dwg.a($$1.b(dvu.z)),
-               dwg.a($$1.b(dvu.A)),
-               dwg.a($$1.b(dvu.B)),
-               dwg.a($$1.b(dvu.C)),
-               dwg.a($$1.b(dvu.D)),
-               dwg.a($$1.b(dvu.E))
+      pb.a($$0, "pillager_outpost/feature_plates", new dye($$4, ImmutableList.of(Pair.of(dyc.a("pillager_outpost/feature_plate"), 1)), dye.a.a));
+      pb.a(
+         $$0,
+         "pillager_outpost/features",
+         new dye(
+            $$4,
+            ImmutableList.of(
+               Pair.of(dyc.a("pillager_outpost/feature_cage1"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_cage2"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_cage_with_allays"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_logs"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_tent1"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_tent2"), 1),
+               Pair.of(dyc.a("pillager_outpost/feature_targets"), 1),
+               Pair.of(dyc.g(), 6)
             ),
-            new dwv(40, 15, dww.a, 34222645)
+            dye.a.b
          )
       );
-      $$0.a(dvt.l, new dwg(List.of(dwg.a($$1.b(dvu.h)), dwg.a($$1.b(dvu.i))), new dwv(24, 4, dww.a, 165745295)));
-      $$0.a(dvt.m, new dwg(List.of(dwg.a($$1.b(dvu.m)), dwg.a($$1.b(dvu.n))), new dwv(20, 8, dww.a, 14357621)));
-      $$0.a(dvt.n, new dwg(List.of(dwg.a($$1.b(dvu.o), 2), dwg.a($$1.b(dvu.s), 3)), new dwv(27, 4, dww.a, 30084232)));
-      $$0.a(dvt.o, new dwg($$1.b(dvu.p), new dwv(2, 1, dww.a, 14357921)));
-      $$0.a(dvt.p, new dwg($$1.b(dvu.q), new dwv(20, 11, dww.b, 10387313)));
-      $$0.a(dvt.r, new dwg($$1.b(dvu.k), new dwu(32, 3, 128, $$2.b(aqr.o))));
-      $$0.a(dvt.s, new dwg($$1.b(dvu.G), new dwv(34, 8, dww.a, 83469867)));
    }
 }
